--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "next -H 0.0.0.0"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
