--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
     "@prisma/client": "^5.17.0",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.1.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
