--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.17.0",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.1.6",
+    "jsdom": "^24.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
