--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@clerk/nextjs": "^5.2.12",
     "@prisma/client": "^5.17.0",
     "@types/dompurify": "^3.0.5",
+    "@vercel/speed-insights": "^1.0.12",
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "zod": "^3.23.8"
   },
