--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
