--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.2.12",
     "@prisma/client": "^5.17.0",
     "@types/dompurify": "^3.0.5",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
